--- a/elastic_django/docker-compose.yml
+++ b/elastic_django/docker-compose.yml
@@ -14,47 +14,23 @@ services:
     command: >
       sh -c "python manage.py runserver 0.0.0.0:8080"
     environment:
-      - DB_HOST=db
-      - DB_NAME=homestead
-      - DB_USER=homestead
-      - DB_PASS=secret
+      - ES_HOST=es7
+      - ES_PORT=9200
     depends_on:
       - es7
-
-  #Postgres Service
-#  db:
-#    image: postgres:12.5
-#    container_name: btre_postgres
-#    restart: unless-stopped
-#    ports:
-#      - "7770:5432"
-#    environment:
-#      POSTGRES_DB: homestead
-#      POSTGRES_USER: homestead
-#      POSTGRES_PASSWORD: secret
-#      SERVICE_TAGS: dev
-#      SERVICE_NAME: postgres
-#    working_dir: /elastic_django
-#    volumes:
-#      - ./:/elastic_django
+    networks:
+      - elastic
 
   es7:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.5.2
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.10.1
     container_name: elastic_django_es7
     environment:
-      - node.name=es7
-      - cluster.name=es-docker-cluster
-      - cluster.initial_master_nodes=es01
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
+      - discovery.type=single-node
     volumes:
       - data1:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
+      - 9300:9300
     networks:
       - elastic
 
